[FIX] mass_mailing: fix overlow-wrap
This commit fixes an issue with the overflow-wrap behavior in the mass_mailing
builder. By default the editor removes the overflow-wrap which sets its value to
`normal`. This value makes it so that the text isn't wrapped if a word overflows
the box its in.

Now, the editable in the mass_mailing builder has the property set to
`break-word` which is the wanted behavior.

task-5974184

--- a/addons/mass_mailing/static/src/iframe_assets/iframe_style.scss
+++ b/addons/mass_mailing/static/src/iframe_assets/iframe_style.scss
@@ -37,6 +37,9 @@ html:has(.o_layout, .o_basic_theme) {
             padding: 0;
             border: none;
         }
+        .o_mass_mailing_value {
+            overflow-wrap: break-word !important;
+        }
         .o_mass_mailing_value ~ .o_loading_screen {
             display: none !important;
         }
